Added progress and and level
