# docs/swagger.json
@@ -60,7 +60,7 @@
                 }
             },
             "post": {
-                "description": "Creates a new investment.",
+                "description": "Creates a new spending.",
                 "consumes": [
                     "*/*"
                 ],
@@ -70,7 +70,7 @@
                 "tags": [
                     "finance"
                 ],
-                "summary": "Create a investment.",
+                "summary": "Create a spending.",
                 "parameters": [
                     {
                         "type": "string",
@@ -80,12 +80,12 @@
                         "required": true
                     },
                     {
-                        "description": "investment to create",
+                        "description": "spending to create",
                         "name": "investment",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/finance.createInvestmentRequest"
+                            "$ref": "#/definitions/finance.createSpendingRequest"
                         }
                     }
                 ],
@@ -93,7 +93,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/finance.createInvestmentResponse"
+                            "$ref": "#/definitions/finance.createSpendingResponse"
                         }
                     }
                 }
@@ -191,6 +191,38 @@
                         "schema": {
                             "$ref": "#/definitions/meditation.createMeditationResponse"
                         }
+                    }
+                }
+            }
+        },
+        "/progress": {
+            "get": {
+                "description": "fetch progress and level for a user.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "progress"
+                ],
+                "summary": "Get progress nad level for a user.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "userId",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Plugin name",
+                        "name": "plugin",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     }
                 }
             }
@@ -654,7 +686,7 @@
         }
     },
     "definitions": {
-        "finance.createInvestmentRequest": {
+        "finance.createSpendingRequest": {
             "type": "object",
             "properties": {
                 "amount": {
@@ -663,12 +695,12 @@
                 "description": {
                     "type": "string"
                 },
-                "investmentTime": {
+                "spendingTime": {
                     "type": "integer"
                 }
             }
         },
-        "finance.createInvestmentResponse": {
+        "finance.createSpendingResponse": {
             "type": "object",
             "properties": {
                 "id": {
@@ -682,7 +714,7 @@
                 "amount": {
                     "type": "integer"
                 },
-                "investmentTime": {
+                "spendingTime": {
                     "type": "integer"
                 },
                 "userId": {
@@ -898,19 +930,6 @@
                 }
             }
         },
-        "user.PluginName": {
-            "type": "string",
-            "enum": [
-                "meditation",
-                "finance",
-                "elevator"
-            ],
-            "x-enum-varnames": [
-                "PluginNameMeditation",
-                "PluginNameFinance",
-                "PluginNameElevator"
-            ]
-        },
         "user.UserDB": {
             "type": "object",
             "properties": {
@@ -931,12 +950,6 @@
                 },
                 "lastName": {
                     "type": "string"
-                },
-                "plugins": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/user.PluginName"
-                    }
                 }
             }
         },
@@ -982,12 +995,6 @@
                 },
                 "lastName": {
                     "type": "string"
-                },
-                "plugins": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/user.PluginName"
-                    }
                 }
             }
         }
